455 enable ci cd on gitlab (#478)

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,33 +17,20 @@
 # https://gitlab.com/gitlab-org/gitlab/-/blob/master/lib/gitlab/ci/templates/Getting-Started.gitlab-ci.yml
 
 stages: # List of stages for jobs, and their order of execution
-  - build
   - test
-  - deployment
 
-build-app: # This job runs in the build stage, which runs first.
-  stage: build
-  tags:
-    - amazon_linux_2023
-  script:
-    - pwd
-    - npm i
-    - npm run build:coverage
-
-playwright: # This job runs in the test stage.
+test-app: # This job runs in the build stage, which runs first.
   stage: test
-  allow_failure: true
+  image:
+    name: tools.nlm.nih.gov/playwright:latest
+  tags:
+    - docker
+    - dvlb7docker03
   script:
-    - npx playwright test --project=ts-etl-ui
-    - npx playwright merge-reports --reporter html ./blob-report
-    - npx nyc report
+    - npm i
+    - npx playwright install --with-deps
+    - npm run test:nlm
   artifacts:
+    when: always
     paths:
       - playwright-report
-      - coverage-e2e
-
-deployment-job: # This job runs in the deployment stage, which runs last.
-  stage: deployment
-  script:
-    - echo "Deploying application..."
-    - echo "Application successfully deployed."
